1999-09-14  Ulrich Drepper  <drepper@cygnus.com>

	* db2/mutex/sparc.gcc (TSL_UNSET): Dereference pointer.

	* elf/elf.h (PF_MASKOS): New definition.
	(EM_VAX): New definition.

1999-08-09  Scott Bambrough  <scottb@netwinder.org>

	* sysdeps/unix/sysv/linux/arm/sys/user.h: Added members
	'unsigned char ftype[8]', and 'unsigned int init_flag' to
	struct user_fp.  Tnese were added in version 2.2.12 of the
	ARM Linux kernel.
	* sysdeps/unix/sysv/linux/arm/sys/elf.h: New file.
	* sysdeps/unix/sysv/linux/arm/sys/procfs.h: New file.
	The generic procfs.h included <asm/elf.h>.  This causes
	structure redefinition errors when <sys/user.h> and <sys/procfs.h>
	are included in the same source file.  Found when building GDB.

1999-09-13  Ulrich Drepper  <drepper@cygnus.com>

	* locale/langinfo.h: Remove byte-order dependent names.
	* locale/categories.def: Update after removal of byte-order dependent
	names.
	* locale/loadlocale.c (_nl_load_locale): Don't allow locale files
	with magic number in other byte order.
	* locale/newlocale.c (__newlocale): Remove byte-order dependent code.
	* locale/C-collate.c: Remove initializers for other byte-order.
	* locale/C-ctype.c: Likewise.
	* locale/C-monetary.c: Likewise.
	* locale/C-paper.c: Likewise.
	* locale/C-time.c: Likewise.
	* locale/lc-collate.c: Remove byte-order oriented initialization.
	* locale/lc-ctype.c: Likewise.
	* locale/lc-monetary.c: Likewise.
	* locale/lc-time.c: Likewise.
	* locale/programs/ld-address.c: Don't generate output in both
	byte-orders.
	* locale/programs/ld-ctype.c: Likewise.
	* locale/programs/ld-paper.c: Likewise.
	* locale/programs/ld-time.c: Likewise.
	* time/strftime.c (NLW): Don't use different byte-orders.
	* wctype/cname-lookup.h (cname_lookup): Likewise.

	* Makeconfig (localedir): Define using libdir, not datadir.
	(msgcatdir): New variable.
	* catgets/Makefile (CPPFLAGS): Define NLSPATH using msgcatdir.
	* elf/Makefile (bash-ldd-rewrite): Replace @TEXTDOMAINDIR@ using
	msgcatdir.